--- a/05. Melspectrograms.ipynb
+++ b/05. Melspectrograms.ipynb
@@ -15,6 +15,19 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t7zY6PEXz5ar"
+      },
+      "source": [
+        "# Mel-Spectrograms\n",
+        "\n",
+        "In this notebook, I go through the process of creating mel-spectrograms from the dataset to train deep learning models. \n",
+        "\n",
+        "Note since melspectrograms are numpy arrays, I can't simply export as csv since numpy arrays are Python-specific objects and they automatically get recognized as string objects when exported as csv. In order to circumvent this issue, I need to save numpy arrays separately."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2-qqrNzGFCzn"
@@ -24,8 +37,6 @@
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
         "from glob import glob\n",
         "import os\n",
         "import librosa"
@@ -553,17 +564,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "71Wpm6Xk4klz"
-      },
-      "source": [
-        "Since melspectrograms are numpy arrays, I can't simply export the dataframe as csv since numpy arrays are Python objects and they get recognized as string objects. In order to circumvent this issue, I had to save numpy arrays separately and then merge it with the dataframe.\n",
-        "\n",
-        "This step is necessary because melspectrograms take a bit of time to extract and it would be inefficient to repeatedly extract melspectrograms whenever I run models."
-      ]
     }
   ]
 }
