--- a/06. Modeling_Part_2_CNN.ipynb
+++ b/06. Modeling_Part_2_CNN.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yzoNwCBz1HT2"
+      },
+      "source": [
+        "# Convolutional Neural Networks"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2-qqrNzGFCzn"
@@ -28,11 +37,9 @@
         "import seaborn as sns\n",
         "\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-        "from sklearn.metrics import plot_confusion_matrix, confusion_matrix, ConfusionMatrixDisplay\n",
         "\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D, GRU\n",
-        "from tensorflow.keras.callbacks import EarlyStopping\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D\n",
         "from tensorflow.keras.utils import to_categorical, plot_model"
       ],
       "execution_count": null,
@@ -195,15 +202,6 @@
           },
           "execution_count": 5
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yB5BtbQN6uEF"
-      },
-      "source": [
-        "# Convolutional Neural Networks"
       ]
     },
     {
