--- a/07. Modeling_Part_3_CRNN.ipynb
+++ b/07. Modeling_Part_3_CRNN.ipynb
@@ -20,7 +20,9 @@
         "id": "U3Ww2rBjI6Yt"
       },
       "source": [
-        "Based on some publications that I came across during my research, I found that combining convolutional layers with recurrent layers is becoming more and more common in the field of machine learning and sound analysis such as speech, voice, and music recongition. This method is certainly appropriate to apply for this project since Convolutional Neural Networks perform really well with image processing and Recurrent Neural Networks have shown to work really well with sequential data. Mel-Spectrograms are images with temporal information, which is sequential in time, so I decided to build out a CRNN model and measure its performance based on accuracy."
+        "# Convolutional Recurrent Neural Networks\n",
+        "\n",
+        "Based on some publications that I came across during my research, I found that combining convolutional layers with recurrent layers is gaining attraction in the field of machine learning and sound analysis such as speech, voice, and music recongition. This method is certainly appropriate to apply for this project since Convolutional Neural Networks perform really well with image and spatial data and Recurrent Neural Networks have shown to work really well with sequential data. Mel-Spectrograms are images with temporal information, which is sequential in time, so I decided to build out a CRNN model and measure its performance based on accuracy."
       ]
     },
     {
@@ -34,14 +36,11 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import plot_confusion_matrix, confusion_matrix, ConfusionMatrixDisplay\n",
         "\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D, GRU, TimeDistributed, LSTM, Permute, Reshape\n",
-        "from tensorflow.keras.callbacks import EarlyStopping\n",
         "from tensorflow.keras.utils import to_categorical, plot_model"
       ],
       "execution_count": null,
