--- a/01. Data Preparation_Feature Extraction.ipynb
+++ b/01. Data Preparation_Feature Extraction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Data Preparation & Feature Extractions\n",
     "\n",
-    "Using Librosa, a Python package that is suitable for music and audio analysis, I extracted key features from the data samples, stored the compiled data as a dataframe, and then exported as csv to use for modeling."
+    "Using Librosa, a Python package that is suitable for music/audio/sound data analysis, I extracted key features from the data samples, stored the compiled data as a dataframe, and then exported as csv to use for modeling."
    ]
   },
   {
